tests/errors/compiler/struct_init_must_start_from_BEGIN/struct_init_after_def.c
struct str { int field; };


void main()
{
	struct str st = 1 };
}
